--- a/WCFClientApplication/Web.config
+++ b/WCFClientApplication/Web.config
@@ -31,14 +31,23 @@
   </system.webServer>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IEmployeeService" />
-      </basicHttpBinding>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IEmployeeService">
+          <security mode="Transport">
+            <transport clientCredentialType="Windows" />
+            <message clientCredentialType="Windows" />
+          </security>
+        </binding>
+      </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/EmployeeService/Service.svc/EmployeeService"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IEmployeeService"
-        contract="EmployeeService.IEmployeeService" name="BasicHttpBinding_IEmployeeService" />
+      <endpoint address="net.tcp://hafs-pc/EmployeeService/Service.svc/EmployeeService"
+        binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmployeeService"
+        contract="EmployeeService.IEmployeeService" name="NetTcpBinding_IEmployeeService">
+        <identity>
+          <servicePrincipalName value="host/hafs-PC" />
+        </identity>
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
